--- a/about.html
+++ b/about.html
@@ -2,35 +2,58 @@
 <html>
   <head>
     <meta charset="UTF-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	 
-    <title>squabbledMC | about me!</title>
-
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">	 
+    <title>bit's bytes | about me!</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <meta name="description" content="squabbled.net: the official site for squabbledMC on YouTube">
 <meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
 <link rel="stylesheet" type="text/css" href="style.css">
-     <div class="topnav">
-  <a style="font-family:comfortaa" href="/index.html">Home</a>
-  <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
-  <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
-  <a style="font-family:comfortaa" href=/specs.html>Specs</a>
-    <a style="font-family:comfortaa" href="https://discord.gg/PJWt8BszpU">Discord</a>
-</div> 
   </head>
   <body>
-<h1>about me :D</h1>
-<p>hi, i'm squabbled (or bit, either one works)!</p>
-<p>i'm a derp who really likes tech, computers, and just about anything with a screen on it.</p>
-<p>i've around the internet for quite some time now, and decided the limits of social media was annoying, so I made my own website ;)</p>
-<p>my favorite food is sushi, i love happy hardcore/techno/trance music, and :3'ing a lot. (:3)</p>
-<p>i've loved computers and tech for as long as i can even really remember to be honest, and made this site so i can have my own email address that's not a free domain... and seem cool to all my friends :3</p>
-<p>i'm aware that this about me sucks, but i'll eventually update it a bit.</p>
-<hr>
- <footer>
-   <p>© squabbled 2016-2023</p>
-   <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email</p>
-</footer> 
+         <div class="topnav">
+  <a style="font-family:comfortaa" href="/">Home</a>
+  <a style="font-family:comfortaa" href=/blog>Blog</a>
+  <a style="font-family:comfortaa" href=/specs>Specs</a>
+  <a style="font-family:comfortaa" href=/about>About</a>
+  <a style="font-family:comfortaa" href=/projects>Projects</a>
+  <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  </div>
+</div> 
+<div class="content">
+<h1><img class="icon" src="https://u.cubeupload.com/squabbled/64bemojified.png"> about me :D</h1>
+<p>hi, i'm bit! i'm most commonly known as squabbled online, but either works.</p>
+<p>i hang around the interwebs lookin for cool stuff to do and make, this site being a prime example of that.</p>
+<p>this page is just sort of dedicated to talking about me, my interests, and other cool stuff i've done.</p>
+<h2>cool stuff i've done</h2>
+<p>the thing i'm most proud of is <a href="https://www.tempuracraft.com>TempuraCraft</a>, my response to pay to win Minecraft servers without a real friendly community, and just survival how the game was intended to play.</p>
+<p>another cool thing was katsudon, a mastodon server that was shut down for my mental health's sake. i loved interacting with the fediverse and learning about how the whole thing worked by straight up running a server off a raspi!</p>
+<h2>my interests</h2>
+<p>1. computers, technology, and anything of that sort.</p>
+<p>ever since i was a kid, i've always been really curious as to how things work behind the scenes, and while i might not be the greatest sysadmin of all time, it's just fun for me.</p>
+<p>2. video games</p>
+<p>although i totally suck at most games, i love Minecraft (and you should join my server, <a href="https://www.tempuracraft.com">TempuraCraft</a>), team fortress 2, halo, and my favorite game of all time is portal 2 (next to oneshot)</p>
+<p>3. collecting tech</p>
+<p>i guess this falls under computers and tech, but i love collecting old tech. i have a ton of old phones and want to get more, some old laptops, 3 raspberry pis, a steam deck, and a bunch of used consoles.</p>
+<p>4. furry stuff</p>
+<p>this one's harder to explain. i have a fursona and am in the community, but the main reason why is because of how nicely i've been treated by the fandom. and they have cake. and hugs.<p>
+<p>(in all seriousness, i just find the whole thing very cute and i got into it when i was little, and just stayed here, and if you're interested, my fursona's name is cloud, and they're the blue fox you see all over this site.)</p>
+<h2>FAQ</h2>
+<h3>Q: how did you get the username squabbled?</h3>
+<p>in 8th grade, i had a homework assignment that had the word "squabble" as part of the vocabulary. it's a real word, and it means a really loud petty fight. i thought the word was really funny and it wasn't taken on steam/discord/this site, so here i am.</p>
+<h3>Q: what's the story behind your fursona?</h3>
+<p>i didn't really "make" them in the typical sense. i found a cute fox skin in minecraft and flipped the colors, and that's been their design since.</p>
+<h3>Q: what do you use to make this site?</h3>
+<p>just notepad++, basic html and css and github pages! i'm most likely going to switch over to a regular VPS because i'm limited to 1GB of storage here, but i also use cloudflare to save bandwidth and protect the site.</p>
+<h3>Q: why does this site look so... old?</h3>
+<p>it's intentional. i love older UI design, specifically <a href="https://cari.institute/aesthetics/frutiger-aero">frutiger aero</a> (which this site is supposed to be designed around), and also, my web designing skills are very geocitiesish because i used to make sites with <a href="https://www.neocities.org">Neocities.</a></p>
+<h2>that's all for now. feel free to ask any questions <a href="/contact">here</a>, or alternatively, to my <a href="https://tumblr.squabbled.net">tumblr page</a>.<p>
+</div>
+ <div class="footer">
+   <p>© squabbled 2016-2023. All rights reserved.</p>
+   <p>site version 4: Aurora</p>
+  <A HREF="https://www.squabbled.net/contact">Contact me</A>
+  </div>
 </div> 
 </html>
