--- a/index.html
+++ b/index.html
@@ -3,38 +3,37 @@
   <head>
     <meta charset="UTF-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	 
-    <title>squabbledMC | tech blog posts, projects, computers, and more!</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>bit's bytes | squabbledMC</title>
 
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-<meta name="description" content="squabbled.net: the official site for squabbledMC on YouTube">
-<meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
+<meta name="description" content="bit's bytes | the home of the hyper blue fox">
+<meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming, bitsbytes, bit's bytes">
 <link rel="stylesheet" type="text/css" href="style.css">
-     <div class="topnav">
-  <a style="font-family:comfortaa" href="/index.html">Home</a>
-  <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
-  <a style="font-family:comfortaa" href="https://www.instagram.com/squabbledMC/">Instagram</a>
-  <a style="font-family:comfortaa" href=/blog>Blog</a>
-  <a style="font-family:comfortaa" href=/specs>Specs</a>
-  <a style="font-family:comfortaa" href=/about>About </a>
-  <a style="font-family:comfortaa" href=/projects>Projects</a>
-  <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
-  <a style="font-family:comfortaa" rel="me" href="https://tumblr.squabbled.net">Tumblr</a>
-</div> 
+
   </head>
   <body>
-  <h1>heyo, i'm squabbled</h1>
-  <p>heyo, i’m bit! i’m a tech obsessed fox on the internet with a sushi addiction.</p>
-  <p>this site basically is just my home for my thoughts, projects, things about me, and ways you can get in touch with me.</p>
-  <p>feel free to go around and see what you like, maybe read the <a href="/blog">blog</a>, or check out some of my<a href="/projects"> projects</a>.</p>
-  <p>i also run <a href="https://www.tempuracraft.com">TempuraCraft</a>, a Minecraft SMP on Java designed to be chill Minecraft survival for builders, explorers, and is fully free without any microtransactions.</p>
-<hr>
- <footer>
-   <p>© squabbled 2016-2023. All rights reserved.</p>
-   <p>site current version 3</p>
-  <A HREF="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email (feel free to say hi!)</A></p>
-<hr>
-</footer> 
+       <div class="topnav">
+  <a style="font-family:comfortaa" href="/">Home</a>
+  <a style="font-family:comfortaa" href=/blog>Blog</a>
+  <a style="font-family:comfortaa" href=/about>About</a>
+  <a style="font-family:comfortaa" href=/specs>Specs</a>
+  <a style="font-family:comfortaa" href=/projects>Projects</a>
+  <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+
+  </div>
 </div> 
+<div class="content">
+  <h1>welcome to bit's bytes!</h1>
+  <p>as the name of this site suggests, i’m bit (or squabbled)! this is my site, feel free to make yourself at home.</p>
+  <p>this site is my personal home on the internet. you'll find all sorts of things about me, my interests, and other goodies.</p>
+  <p>feel free to go around and see what you like, maybe read the <a href="/blog">blog</a>, or check out some of my <a href="/projects">projects</a>.</p>
+  <p>i also run <a href="https://www.tempuracraft.com">TempuraCraft</a>, a Minecraft SMP on Java designed to be chill Minecraft survival for builders, explorers, and is fully free without any microtransactions.</p>
+ </div>
+ <div class="footer">
+   <p>© squabbled 2016-2023. All rights reserved.</p>
+   <p>site version 4: Aurora (Still work in progress, contact if you find any issues or have any comments)</p>
+  <A HREF="https://www.squabbled.net/contact">contact me</A>
+  </div>
 </html>
