--- a/projects/index.html
+++ b/projects/index.html
@@ -11,23 +11,31 @@
 <meta name="description" content="squabbled.net: the official site for squabbledMC on YouTube">
 <meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
 <link rel="stylesheet" type="text/css" href="style.css">
-     <div class="topnav">
-  <a style="font-family:comfortaa" href="/index">Home</a>
-  <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
-  <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
-  <a style="font-family:comfortaa" href=/specs>Specs</a>
-</div> 
+
   </head>
   <body>
+  <div class="topnav">
+  <a style="font-family:comfortaa" href="/">Home</a>
+  <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
+  <a style="font-family:comfortaa" href="https://www.instagram.com/squabbledMC/">Instagram</a>
+  <a style="font-family:comfortaa" href=/blog>Blog</a>
+  <a style="font-family:comfortaa" href=/specs>Specs</a>
+  <a style="font-family:comfortaa" href=/about>About</a>
+  <a style="font-family:comfortaa" href=/projects>Projects</a>
+  <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  <a style="font-family:comfortaa" href="https://tumblr.squabbled.net">Tumblr</a>
+  </div>
+  <div class="content">
 <h1>Projects</h1>
 <a href="https://www.tempuracraft.com">TempuraCraft - a Minecraft Java SMP with a friendly community, no pay to win features, plugins such as McMMO, and on the latest version. Play Minecraft online how it was intended!</a>
 <hr>
 <a href="https://www.squabbled.net/projects/kittyclickr/index.html">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
 <p>and more to come! :3</p>
-<hr>
- <footer>
-   <p>© squabbled 2016-2023</p>
-   <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email</p>
-</footer> 
+ </div>
+ <div class="footer">
+   <p>© squabbled 2016-2023. All rights reserved.</p>
+   <p>site version 4 (BETA): Aurora</p>
+  <A HREF="https://www.squabbled.net/contact">Contact me</A>
+  </div>
 </div> 
 </html>
