--- a/specs.html
+++ b/specs.html
@@ -2,42 +2,51 @@
  <head>
     <meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>squabbled's computer specs</title>
-
+    <title>bit's bytes | PC Specs</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <meta name="description" content="squabbled.net: the official site for squabbledMC on YouTube">
 <meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
 <link rel="stylesheet" type="text/css" href="style.css">
-     <div class="topnav">
-  <a style="font-family:comfortaa" href="/index.html">Home</a>
-  <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
-  <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
+
+  </head>
+<body>
+       <div class="topnav">
+  <a style="font-family:comfortaa" href="/">Home</a>
+  <a style="font-family:comfortaa" href=/blog>Blog</a>
+  <a style="font-family:comfortaa" href=/specs>Specs</a>
+  <a style="font-family:comfortaa" href=/about>About</a>
+  <a style="font-family:comfortaa" href=/projects>Projects</a>
+  <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+
+  </div>
 
 
 </div> 
-  </head>
-<body>
-  <h1>squabbled's PC specs of 2023</h1>
+<div class="content">
+  <h1><img src="https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Apps-krfb-icon.png" width="48" height="48"> squabbled's PC specs of 2023</h1>
   <h2>This site will be updated as time goes on, and as I upgrade my system.</h2>
-<p>Removed all the old updates and as of 5/25/23, I am only booting Windows 10. I gave up on Ubuntu Desktop and went back to just using 10. Will I upgrade to 11? Who knows.</p>
-<p>I also have a Steam Deck and some other hardware, but if you really want the specs, <a href="https://www.google.com/search?&q=steam+deck+specs">Google it.</a></p>
+<h3>Last updated 9/9/2023</h3>
+
   
  <hr>
- <h1>Desktop Specs:</h1>
+ <h1><img src="https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Devices-computer-icon.png" width="48" height="48"> Desktop specs:</h1>
 
 <h2>Hardware</h2>
 <p>CPU: Intel Core i3-10100</p>
 <p>RAM: 16GB DDR4-2400</p>
-<p>GPU: nVidia GTX 1650 Super 4GB</p>
+<p>GPU: Nvidia GTX 1650 Super 4GB</p>
 <p>Microphone: Blue Snowball Ice</p>
 <p>Headphones: Anker SoundCore q20</p>
+<p>Primary Monitor: 165Hz Sceptre 27 inch 1080p</p>
+<p>Secondary Monitor: 75Hz Samsung 24 inch 1080p</p>
 <p>Keyboard: <a href=https://www.youtube.com/watch?v=bWgkwNOxtxA>RK68 65%</a></p>
-<p>Mouse: <a href=https://www.youtube.com/watch?v=zSMDDUgt6ao>SteelSeries Rival 5</a></p>
+<p>Mouse: Logitech G502 Hero (Wired)</p>
 <p>Storage:</p>
 <p>Main SSD (10): 512GB SanDisk internal SSD (Sata, not M.2)</p>
-<p>Backup SSD: 256GB Kingston internal SSD</p>
-<p>Games drive: 1TB internal WD blue HDD</p>
+<p>Backup and Games SSD: 256GB Kingston internal SSD</p>
+<p>Misc drive: 1TB internal WD blue HDD</p>
 <p>New file/games drive: 5TB One Touch SeaGate HDD</p>
 <p>Cloud Storage: 200GB <a href="https://one.google.com">Google One</a></p>
   <h2>Software</h2>
@@ -45,34 +54,29 @@
   <p>Web Browser: Mozilla Firefox</p>
   <p>Recording/streaming software: <a href=https://obsproject.com/>OBS (Open Broadcaster Software)</a></p>
   <p>Controller Program: reWASD/Steam Remapper</p>
-  <hr>
-<hr>
+
 <h2>Misc</h2>
 <p>VR Headset: Oculus Quest 2, attached via USB-C</p>
 <p>Controller: Xbox One X Gray/Green Controller</p>
 <p>Phone: iPhone 13 256gb Blue</p>
 <p>Adblocker: <a href="https://www.ublockorigin.com>uBlock Origin</a> with <a href="https://pi-hole.net/">a Pi-hole running on a Pi2B</a>.</p>
-<hr>
-<h1>Photos of setup (as of 4/5/2022)</h1>
-<img src="https://u.cubeupload.com/squabbled/5997D7340449464F8D37.jpg">
-<img src="https://u.cubeupload.com/squabbled/BC8D81C71A7941CB9A64.jpg">
-<img src="https://u.cubeupload.com/squabbled/41C4671364244D2EA412.jpg">
-<img src="https://u.cubeupload.com/squabbled/248BC649F8DD400E9421.jpg">
+
 
 <hr>
-<h1>Laptop Specs (Dell Inspiron 14):</h1>
+<h1><img src="https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Devices-computer-laptop-icon.png" width="48" height="48"> Laptop Specs (Dell Inspiron 14):</h1>
 <h2>Hardware:</h2>
 <p>CPU: Ryzen 5 5625U</p>
-<p>14 inch 1920x1200 16:10 display (with touchscreen, although it is a regular laptop and not a 2 in 1 so it doesn't get much use)<p>
+<p>14 inch 1920x1200 16:10 display (with touchscreen)<p>
 <p>GPU: Radeon Integrated Graphics</p>
 <p>16GB of RAM</p>
 <p>512GB SSD</p>
 <p>256GB SanDisk USB 3 flash drive for files</p>
+</div>
 </body>
-<hr>
- <footer>
-   <p>© squabbled 2016-2023</p>
-   <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email</p>
-</footer> 
+ <div class="footer">
+   <p>© squabbled 2016-2023. All rights reserved.</p>
+   <p>site version 4: Aurora</p>
+  <A HREF="/contact">Contact me</A>
+  </div> 
 </div> 
 </html>
