--- a/about.html
+++ b/about.html
@@ -45,9 +45,13 @@
 <h3>Q: what's the story behind your fursona?</h3>
 <p>i didn't really "make" them in the typical sense. i found a cute fox skin in minecraft and flipped the colors, and that's been their design since.</p>
 <h3>Q: what do you use to make this site?</h3>
-<p>just notepad++, basic html and css and github pages! i'm most likely going to switch over to a regular VPS because i'm limited to 1GB of storage here, but i also use cloudflare to save bandwidth and protect the site.</p>
+<p>just notepad++, basic html and css and github pages! i'm most likely going to switch over to something else because i'm limited to 1GB of storage here, but i also use cloudflare to save bandwidth and protect the site.</p>
 <h3>Q: why does this site look so... old?</h3>
 <p>it's intentional. i love older UI design, specifically <a href="https://cari.institute/aesthetics/frutiger-aero">frutiger aero</a> (which this site is supposed to be designed around), and also, my web designing skills are very geocitiesish because i used to make sites with <a href="https://www.neocities.org">Neocities.</a></p>
+<h2>Favorite Games</h2>
+<p><a href="https://store.steampowered.com/app/620/Portal_2/">Portal 2</a> (All time favorite), <a href="https://www.minecraft.net>Minecraft</a>, <a href="https://www.teamfortress.com/">Team Fortress 2</a>, and <a href="https://www.oneshot-game.com/">Oneshot.</a>
+<h2>Favorite Websites</h2>
+<p>I have so many websites that I love that I had to make a page dedicated to linking awesome websites <a href="/more/awesome/">here that you should really check out</a>.</p>
 <h2>that's all for now. feel free to ask any questions <a href="/contact">here</a>, or alternatively, to my <a href="https://tumblr.squabbled.net">tumblr page</a>.<p>
 </div>
  <div class="footer">
