--- a/projects/index.html
+++ b/projects/index.html
@@ -30,11 +30,12 @@
 <a href="https://www.tempuracraft.com">TempuraCraft - a Minecraft Java SMP with a friendly community, no pay to win features, plugins such as McMMO, and on the latest version. Play Minecraft online how it was intended!</a>
 <hr>
 <a href="https://www.squabbled.net/projects/kittyclickr/index.html">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
+<a href="https://github.com/squabbled/FandomFixed">FandomFixed - Removes all annoyances and makes a Wikipedia-like interface for Fandom using uBlock Origin</a>
 <p>and more to come! :3</p>
  </div>
  <div class="footer">
    <p>© squabbled 2016-2023. All rights reserved.</p>
-   <p>site version 4 (BETA): Aurora</p>
+   <p>site version 4: Aurora</p>
   <A HREF="https://www.squabbled.net/contact">Contact me</A>
   </div>
 </div> 
