--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <a style="font-family:comfortaa" href=/specs>Specs</a>
   <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  <a style="font-family:comfortaa" href="/more/links/">Links</a>
 
   </div>
 </div> 
@@ -33,7 +34,7 @@
  </div>
  <div class="footer">
    <p>© squabbled 2016-2023. All rights reserved.</p>
-   <p>site version 4: Aurora (Still work in progress, contact if you find any issues or have any comments)</p>
+   <p>site powered by Aurora v0.1, made by squabbled.net</p>
   <A HREF="https://www.squabbled.net/contact">contact me</A>
   </div>
 </html>
