--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <a style="font-family:comfortaa" href=/specs>Specs</a>
   <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
-  <a style="font-family:comfortaa" href="/more/links/">Links</a>
+  <a style="font-family:comfortaa" href="/more/links">Links</a>
 
   </div>
 </div> 
