--- a/more/links.html
+++ b/more/links.html
@@ -27,7 +27,7 @@
 <div class="content">
   <h1>Links</h1>
   <h2>These are some links to my presence on other websites.</h2>
-  <p>Just for awareness - I no longer post to Twitter/X (as much as I hate that name), and my only accounts are @depufox and @squabbledMC still. Don't follow me there, I never use it.</p>
+  <p>Just for awareness - I no longer post to Twitter, and my only accounts are @depufox and @squabbledMC still. Don't follow me there, I never use it.</p>
   <a href="https://www.youtube.com/c/squabbledMC">YouTube</a>
   <a href="https://www.instagram.com/squabbledMC">Instagram</a>
   <a href="https://bsky.app/profile/squabbled.net">BlueSky</a>
