forgot a quotation oop

--- a/about.html
+++ b/about.html
@@ -27,13 +27,13 @@
 <p>i hang around the interwebs lookin for cool stuff to do and make, this site being a prime example of that.</p>
 <p>this page is just sort of dedicated to talking about me, my interests, and other cool stuff i've done.</p>
 <h2>cool stuff i've done</h2>
-<p>the thing i'm most proud of is <a href="https://www.tempuracraft.com>TempuraCraft</a>, my response to pay to win Minecraft servers without a real friendly community, and just survival how the game was intended to play.</p>
+<p>the thing i'm most proud of is <a href="https://www.tempuracraft.com">TempuraCraft</a>, my response to pay to win Minecraft servers without a real friendly community, and just survival how the game was intended to play.</p>
 <p>another cool thing was katsudon, a mastodon server that was shut down for my mental health's sake. i loved interacting with the fediverse and learning about how the whole thing worked by straight up running a server off a raspi!</p>
 <h2>my interests</h2>
 <p>1. computers, technology, and anything of that sort.</p>
 <p>ever since i was a kid, i've always been really curious as to how things work behind the scenes, and while i might not be the greatest sysadmin of all time, it's just fun for me.</p>
 <p>2. video games</p>
-<p>although i totally suck at most games, i love Minecraft (and you should join my server, <a href="https://www.tempuracraft.com">TempuraCraft</a>), team fortress 2, halo, and my favorite game of all time is portal 2 (next to oneshot)</p>
+<p>although i totally suck at most games, i love Minecraft , team fortress 2, halo, and my favorite game of all time is portal 2 (next to oneshot)</p>
 <p>3. collecting tech</p>
 <p>i guess this falls under computers and tech, but i love collecting old tech. i have a ton of old phones and want to get more, some old laptops, 3 raspberry pis, a steam deck, and a bunch of used consoles.</p>
 <p>4. furry stuff</p>
