other missing slash. gah

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 <h2>Favorite Games</h2>
 <p><a href="https://store.steampowered.com/app/620/Portal_2/">Portal 2</a> (All time favorite), <a href="https://www.minecraft.net>Minecraft</a>, <a href="https://www.teamfortress.com/">Team Fortress 2</a>, and <a href="https://www.oneshot-game.com/">Oneshot.</a>
 <h2>Favorite Websites</h2>
-<p>I have so many websites that I love that I had to make a page dedicated to linking awesome websites <a href="/more/awesome/">here that you should really check out</a>.</p>
+<p>I have so many websites that I love that I had to make a page dedicated to linking awesome websites <a href="/more/awesome">here that you should really check out</a>.</p>
 <h2>that's all for now. feel free to ask any questions <a href="/contact">here</a>, or alternatively, to my <a href="https://tumblr.squabbled.net">tumblr page</a>.<p>
 </div>
  <div class="footer">
