emergency backup to github
considering contabo's lack of supportthis is so the site isn't completely gone

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
   </div>
 </div> 
 <div class="content">
-  <h1>File not found<h1>
+  <h1><img src="https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Actions-document-close-icon.png" width="48" height="48">File not found</h1>
   <p>The page you're trying to visit could not be found. Click <a href="/">here</a> to go back to the homepage.</p>
   <p>If whatever you're looking for has been deleted or is missing, please check the URL or <a href="https://www.squabbled.net/contact">contact me.</a></p>
   
