--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 <p>hi, i'm bit! i'm most commonly known as squabbled online, but either works.</p>
 <p>i hang around the interwebs lookin for cool stuff to do and make, this site being a prime example of that.</p>
 <p>this page is just sort of dedicated to talking about me, my interests, and other cool stuff i've done.</p>
+<a href="https://www.squabbled.net/more/cloudgallery">click here to see all the art of my fursona i have! :3</a>
 <h2>cool stuff i've done</h2>
 <p>the thing i'm most proud of is <a href="https://www.tempuracraft.com">TempuraCraft</a>, my response to pay to win Minecraft servers without a real friendly community, and just survival how the game was intended to play.</p>
 <p>another cool thing was katsudon, a mastodon server that was shut down for my mental health's sake. i loved interacting with the fediverse and learning about how the whole thing worked by straight up running a server off a raspi!</p>
@@ -44,8 +45,9 @@
 <p>in 8th grade, i had a homework assignment that had the word "squabble" as part of the vocabulary. it's a real word, and it means a really loud petty fight. i thought the word was really funny and it wasn't taken on steam/discord/this site, so here i am.</p>
 <h3>Q: what's the story behind your fursona?</h3>
 <p>i didn't really "make" them in the typical sense. i found a cute fox skin in minecraft and flipped the colors, and that's been their design since.</p>
+<p>bonus, click <a href="https://www.squabbled.net/more/cloudgallery">here</a> to see all the art I have of my fursona! :3</p>
 <h3>Q: what do you use to make this site?</h3>
-<p>just notepad++, basic html and css and github pages! i'm most likely going to switch over to something else because i'm limited to 1GB of storage here, but i also use cloudflare to save bandwidth and protect the site.</p>
+<p>just notepad++, basic html and css and a regular ol vps! i used to use neocities and later github, but i was bored and upgraded to a 5$ VPS.</p>
 <h3>Q: why does this site look so... old?</h3>
 <p>it's intentional. i love older UI design, specifically <a href="https://cari.institute/aesthetics/frutiger-aero">frutiger aero</a> (which this site is supposed to be designed around), and also, my web designing skills are very geocitiesish because i used to make sites with <a href="https://www.neocities.org">Neocities.</a></p>
 <h2>Favorite Games</h2>
