--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
  </div>
  <div class="footer">
    <p>© squabbled 2016-2023. All rights reserved.</p>
-   <p>site powered by Aurora v0.1, made by squabbled.net</p>
   <A HREF="https://www.squabbled.net/contact">contact me</A>
+  <p>squabbled.net is run entirely by donations and does not sell your info or serve ads (besides links to other similar sites). <a href="https://cash.app/$squabbled">Click here to donate!</a></p>
+  <a href="https://hotlinewebring.club/squabbled/previous">Back </a> <a href="https://hotlinewebring.club/squabbled/next"> Next</a>
+<a href="https://hotlinewebring.club">Hotline Webring </a> 
   </div>
 </html>
