--- a/more/links.html
+++ b/more/links.html
@@ -17,28 +17,31 @@
        <div class="topnav">
   <a style="font-family:comfortaa" href="/">Home</a>
   <a style="font-family:comfortaa" href=/blog>Blog</a>
-  <a style="font-family:comfortaa" href=/about>About</a>
   <a style="font-family:comfortaa" href=/specs>Specs</a>
+  <a style="font-family:comfortaa" href=/about>About</a>
   <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  <a style="font-family:comfortaa" href="/more/links">Links</a>
 
   </div>
 </div> 
 <div class="content">
   <h1>Links</h1>
+  <h2>To see my bookmarks/friends/things I find cool, click <a href="/more/awesome">here!</a></h2>
   <h2>These are some links to my presence on other websites.</h2>
   <p>Just for awareness - I no longer post to Twitter, and my only accounts are @depufox and @squabbledMC still. Don't follow me there, I never use it.</p>
   <a href="https://www.youtube.com/c/squabbledMC">YouTube</a>
   <a href="https://www.instagram.com/squabbledMC">Instagram</a>
   <a href="https://bsky.app/profile/squabbled.net">BlueSky</a>
   <a href="https://tumblr.squabbled.net">Tumblr</a>
-  <a href="https://steamcommunity.com/id/squabbled/>Steam</a>
+  <a href="https://steamcommunity.com/id/squabbled/">Steam</a>
   <a href="https://github.com/squabbled">GitHub</a>
   <a href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  <a href="https://www.last.fm/user/squabbled">LastFM</a>
+  <a href="https://www.reddit.com/user/squabbledMC/">Reddit</a>
  </div>
  <div class="footer">
    <p>© squabbled 2016-2023. All rights reserved.</p>
-   <p>site version 4: Aurora</p>
   <A HREF="https://www.squabbled.net/contact">contact me</A>
   </div>
 </html>
