--- a/projects/index.html
+++ b/projects/index.html
@@ -14,22 +14,22 @@
 
   </head>
   <body>
-  <div class="topnav">
+       <div class="topnav">
   <a style="font-family:comfortaa" href="/">Home</a>
-  <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
-  <a style="font-family:comfortaa" href="https://www.instagram.com/squabbledMC/">Instagram</a>
   <a style="font-family:comfortaa" href=/blog>Blog</a>
-  <a style="font-family:comfortaa" href=/specs>Specs</a>
   <a style="font-family:comfortaa" href=/about>About</a>
+  <a style="font-family:comfortaa" href=/specs>Specs</a>
   <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
-  <a style="font-family:comfortaa" href="https://tumblr.squabbled.net">Tumblr</a>
+  <a style="font-family:comfortaa" href="/more/links">Links</a>
+
   </div>
   <div class="content">
 <h1>Projects</h1>
 <a href="https://www.tempuracraft.com">TempuraCraft - a Minecraft Java SMP with a friendly community, no pay to win features, plugins such as McMMO, and on the latest version. Play Minecraft online how it was intended!</a>
 <hr>
 <a href="https://www.squabbled.net/projects/kittyclickr/index.html">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
+<hr>
 <a href="https://github.com/squabbled/FandomFixed">FandomFixed - Removes all annoyances and makes a Wikipedia-like interface for Fandom using uBlock Origin</a>
 <p>and more to come! :3</p>
  </div>
