--- a/specs.html
+++ b/specs.html
@@ -19,6 +19,7 @@
   <a style="font-family:comfortaa" href=/about>About</a>
   <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  <a style="font-family:comfortaa" href="/more/links">Links</a>
 
   </div>
 
@@ -27,7 +28,7 @@
 <div class="content">
   <h1><img src="https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Apps-krfb-icon.png" width="48" height="48"> squabbled's PC specs of 2023</h1>
   <h2>This site will be updated as time goes on, and as I upgrade my system.</h2>
-<h3>Last updated 9/9/2023</h3>
+<h3>Last updated 11/28/2023</h3>
 
   
  <hr>
@@ -36,7 +37,7 @@
 <h2>Hardware</h2>
 <p>CPU: Intel Core i3-10100</p>
 <p>RAM: 16GB DDR4-2400</p>
-<p>GPU: Nvidia GTX 1650 Super 4GB</p>
+<p>GPU: Nvidia RTX 3050 8GB</p>
 <p>Microphone: Blue Snowball Ice</p>
 <p>Headphones: Anker SoundCore q20</p>
 <p>Primary Monitor: 165Hz Sceptre 27 inch 1080p</p>
@@ -50,7 +51,7 @@
 <p>New file/games drive: 5TB One Touch SeaGate HDD</p>
 <p>Cloud Storage: 200GB <a href="https://one.google.com">Google One</a></p>
   <h2>Software</h2>
-  <p>OS: Windows 10 Home </p>
+  <p>OS: Windows 11 Home </p>
   <p>Web Browser: Mozilla Firefox</p>
   <p>Recording/streaming software: <a href=https://obsproject.com/>OBS (Open Broadcaster Software)</a></p>
   <p>Controller Program: reWASD/Steam Remapper</p>
@@ -59,7 +60,7 @@
 <p>VR Headset: Oculus Quest 2, attached via USB-C</p>
 <p>Controller: Xbox One X Gray/Green Controller</p>
 <p>Phone: iPhone 13 256gb Blue</p>
-<p>Adblocker: <a href="https://www.ublockorigin.com>uBlock Origin</a> with <a href="https://pi-hole.net/">a Pi-hole running on a Pi2B</a>.</p>
+<p>Adblocker: <a href="https://www.ublockorigin.com">uBlock Origin</a> with <a href="https://pi-hole.net/">a Pi-hole running on a Pi2B</a>.</p>
 
 
 <hr>
@@ -74,8 +75,7 @@
 </div>
 </body>
  <div class="footer">
-   <p>Â© squabbled 2016-2023. All rights reserved.</p>
-   <p>site version 4: Aurora</p>
+   <p>© squabbled 2016-2023. All rights reserved.</p>
   <A HREF="/contact">Contact me</A>
   </div> 
 </div> 
