--- a/more/awesome.html
+++ b/more/awesome.html
@@ -21,17 +21,28 @@
   <a style="font-family:comfortaa" href=/specs>Specs</a>
   <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  <a style="font-family:comfortaa" href="/more/links">Links</a>
+
+  </div>
 
   </div>
 </div> 
 <div class="content">
-  <h1>Awesome Bookmarks</h1>
-  <p>This page just contains a bunch of websites I find cool and want to share, as well as web links and web rings (coming soon)</p>
+  <h1><img src="https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Actions-document-open-remote-icon.png" width="48" height="48">Awesome Bookmarks</h1>
+  <p>This page just contains a bunch of websites I find cool, friends, web links, and more!</p>
+  <p>Here from a webring, web button, ad, or otherwise? Welcome! Why not check out the <a href="/index.html">homepage</a> or read what I've been up to on my <a href="/blog">blog!</a></p>
   <a href="https://dimden.dev/"><img src="https://dimden.dev/images/88x31.gif"></a>
 <a href="https://whispy.org/" target="_blank"><img src="https://dimden.dev/images/buttons/whispynow.png" alt=""></a>
+<a href="https://invoxiplaygames.uk"><img src="/more/buttons/ipg.png">
+<a href="https://ioletsgo.gay"><img src="/more/buttons/ioletsgo.gif">
+<a href="https://sadgrl.online/" target="_blank"><img src="https://sadgrl.online/assets/images/buttons/sadgrlonline.gif"></a>
 <hr>
 <a href="https://twitter.com/kigidere">@kigidere</a>
 <a href="https://crimson-onion.tumblr.com">@crimson-onion</a>
+<hr>
+<a href="https://hotlinewebring.club/squabbled/previous">Back </a> <a href="https://hotlinewebring.club/squabbled/next"> Next</a>
+<a href="https://hotlinewebring.club">Hotline Webring </a> 
+<iframe width="180" height="180" style="border:none" src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
  </div>
  <div class="footer">
    <p>© squabbled 2016-2023. All rights reserved.</p>
