--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 </div> 
 <div class="content">
   <h1>welcome to bit's bytes!</h1>
+	<h1>This site is currently under emergency maintenance. Due to hosting issues, the site's been temporarily moved. Many things will not work. I don't have an estimate for when the site will fully be back.</h1>
   <p>as the name of this site suggests, i’m bit (or squabbled)! this is my site, feel free to make yourself at home.</p>
   <p>this site is my personal home on the internet. you'll find all sorts of things about me, my interests, and other goodies.</p>
   <p>feel free to go around and see what you like, maybe read the <a href="/blog">blog</a>, or check out some of my <a href="/projects">projects</a>.</p>
   <p>i also run <a href="https://www.tempuracraft.com">TempuraCraft</a>, a Minecraft SMP on Java designed to be chill Minecraft survival for builders, explorers, and is fully free without any microtransactions.</p>
- </div>
+ 
+</div>
  <div class="footer">
    <p>© squabbled 2016-2023. All rights reserved.</p>
   <A HREF="https://www.squabbled.net/contact">contact me</A>
